<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AlphaActivity">

    <TextView
            android:text="@string/alphaActivity"
            android:layout_width="176dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.015" android:textSize="40sp"
            android:id="@+id/nameTextView" android:textStyle="bold"/>
    <Button
            android:text="@string/startB"
            android:layout_width="78dp"
            android:layout_height="46dp"
            android:textAllCaps="false"
            android:id="@+id/startButton1" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.13"/>
    <Button
            android:text="@string/startC"
            android:layout_width="78dp"
            android:layout_height="46dp"
            android:textAllCaps="false"
            android:id="@+id/startButton2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintVertical_bias="0.13"/>

    <Button
            android:text="@string/finishA"
            android:layout_width="78dp"
            android:layout_height="46dp"
            android:textAllCaps="false"
            android:id="@+id/finishButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.668"
            app:layout_constraintVertical_bias="0.13"/>
    <Button
            android:text="@string/dialog"
            android:layout_width="78dp"
            android:layout_height="46dp"
            android:textAllCaps="false"
            android:id="@+id/dialogButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintVertical_bias="0.13"/>
    <TextView
            android:text="@string/list"
            android:layout_width="224dp"
            android:layout_height="34dp"
            android:scrollbars="vertical"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.218"
            android:textSize="22sp"/>
    <TextView
            android:layout_width="380dp"
            android:layout_height="256dp"
            android:id="@+id/methodList" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.385"/>
    <TextView
            android:text="@string/status"
            android:layout_width="144dp"
            android:layout_height="30dp"
            android:id="@+id/textView8" android:textSize="22sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.629"/>
    <TextView
            android:layout_width="380dp"
            android:layout_height="231dp"
            android:id="@+id/status" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.941"/>

</android.support.constraint.ConstraintLayout>